# utk-hyku-ingest

./: .gitignore  README.md  ingest.py
hyku-ingest/: README.md  junk.csv  pyproject.toml
hyku-ingest/hyku_ingest/: __init__.py  ingest.py  main.py  split_sheet.py
hyku-ingest/hyku_ingest/create_sheet/: __init__.py  create_sheet.py
hyku-ingest/hyku_ingest/split_sheet/: __init__.py  split_sheet.py
