[tool.poetry]
name = "hyku-ingest"
version = "0.0.6"
description = ""
authors = ["Weston49 <weston.agreda@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ingest = "hyku_ingest.main:start"