[tool.poetry]
name = "hyku-ingest"
version = "0.0.14"
description = ""
authors = ["Weston49 <weston.agreda@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
argparse = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ingest = "hyku_ingest.ingest:start"